@@ -1,3 +1,10 @@
+2010-02-22  Miguel de Dios  <miguel.dedios@artica.es>
+
+	Merged from trunk:
+	
+	* include/functions_alerts.php: fix when try delete only the alerts from
+	alert policies form. 
+
 2010-02-20  Sancho Lerena <slerena@artica.es>
 
         * godmode/setup/setup.php: Fixed bug #2952636, thanks Junichi for the 
